config/networkpolicy/vgmanager-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: vg-manager-network-policy
  namespace: system
  labels:
    app.kubernetes.io/name: vg-manager-network-policy
    app.kubernetes.io/part-of: lvms-provisioner
    app.kubernetes.io/component: network-policy
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/component: vg-manager
      app.kubernetes.io/name: vg-manager
  policyTypes:
  - Ingress
  - Egress
  ingress:
  # Allow metrics endpoint access for VG Manager
  - ports:
    - protocol: TCP
      port: 8443
    from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: openshift-monitoring
  egress:
  # Allow Kubernetes API access
  - ports:
    - protocol: TCP
      port: 6443
